[gd_scene load_steps=11 format=3 uid="uid://d3dboddtap3eq"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_52uwp"]
[ext_resource type="Script" path="res://Scripts/Input.gd" id="1_pl66h"]
[ext_resource type="FontFile" uid="uid://8g0qdv205djh" path="res://Fonts/PixelOperator.ttf" id="2_vb5pg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ey55j"]
bg_color = Color(0.14902, 0.145098, 0.152941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o8jhn"]
bg_color = Color(0.266667, 0.243137, 0.215686, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b2six"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rsr6q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_psmfa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_50q62"]
bg_color = Color(0.305882, 0.0705882, 0.054902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sj5oa"]
bg_color = Color(0.781709, 0.253456, 0.214864, 1)

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_52uwp")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ey55j")

[node name="Margins" type="MarginContainer" parent="Background"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Columns" type="HBoxContainer" parent="Background/Margins"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Rows" type="VBoxContainer" parent="Background/Margins/Columns"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="GameInfo" type="PanelContainer" parent="Background/Margins/Columns/Rows"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_o8jhn")

[node name="MarginContainer" type="MarginContainer" parent="Background/Margins/Columns/Rows/GameInfo"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Background/Margins/Columns/Rows/GameInfo/MarginContainer"]
layout_mode = 2

[node name="ChatHistory" type="VBoxContainer" parent="Background/Margins/Columns/Rows/GameInfo/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="InputArea" type="PanelContainer" parent="Background/Margins/Columns/Rows"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o8jhn")

[node name="HBoxContainer" type="HBoxContainer" parent="Background/Margins/Columns/Rows/InputArea"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/Margins/Columns/Rows/InputArea/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vb5pg")
theme_override_font_sizes/font_size = 30
text = " > "

[node name="Input" type="LineEdit" parent="Background/Margins/Columns/Rows/InputArea/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_vb5pg")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_b2six")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rsr6q")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_psmfa")
caret_blink = true
script = ExtResource("1_pl66h")

[node name="MarginContainer" type="MarginContainer" parent="Background/Margins/Columns/Rows/InputArea/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Button" type="Button" parent="Background/Margins/Columns/Rows/InputArea/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vb5pg")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_50q62")
theme_override_styles/hover = SubResource("StyleBoxFlat_sj5oa")
text = " ROLL DICE "

[node name="Timer" type="Timer" parent="Background/Margins/Columns/Rows/InputArea/HBoxContainer/MarginContainer"]
wait_time = 0.1

[node name="VBoxContainer" type="VBoxContainer" parent="Background/Margins/Columns"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Background/Margins/Columns/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vb5pg")
theme_override_font_sizes/font_size = 30
text = "PLAYER HEALTH"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="Background/Margins/Columns/VBoxContainer"]
modulate = Color(0, 1, 0.105882, 1)
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="InventoryLabel" type="Label" parent="Background/Margins/Columns/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_vb5pg")
theme_override_font_sizes/font_size = 30
text = "INVENTORY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Inventory" type="PanelContainer" parent="Background/Margins/Columns/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_o8jhn")

[node name="InventoryRows" type="VBoxContainer" parent="Background/Margins/Columns/VBoxContainer/Inventory"]
layout_mode = 2

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]

[connection signal="text_submitted" from="Background/Margins/Columns/Rows/InputArea/HBoxContainer/Input" to="." method="_on_input_text_submitted"]
[connection signal="text_submitted" from="Background/Margins/Columns/Rows/InputArea/HBoxContainer/Input" to="Background/Margins/Columns/Rows/InputArea/HBoxContainer/Input" method="_on_text_submitted"]
[connection signal="button_down" from="Background/Margins/Columns/Rows/InputArea/HBoxContainer/MarginContainer/Button" to="Background/Margins/Columns/Rows/InputArea/HBoxContainer/Input" method="_on_button_button_down"]
[connection signal="timeout" from="Background/Margins/Columns/Rows/InputArea/HBoxContainer/MarginContainer/Timer" to="Background/Margins/Columns/Rows/InputArea/HBoxContainer/Input" method="_on_timer_timeout"]
